@@ -26,7 +26,7 @@
 \method{coef}{mlt}(object, fixed = TRUE, ...)
 coef(object) <- value
 \method{weights}{mlt}(object, ...)
-\method{logLik}{mlt}(object, parm = coef(object, fixed = FALSE), w = weights(object), newdata, ...)
+\method{logLik}{mlt}(object, parm = coef(object, fixed = FALSE), w = NULL, newdata, ...)
 \method{vcov}{mlt}(object, parm = coef(object, fixed = FALSE), complete = FALSE, ...)
 Hessian(object, ...)
 \method{Hessian}{mlt}(object, parm = coef(object, fixed = FALSE), ...)
